added code to save the edited files

--- a/notebooks/simulate_editing.ipynb
+++ b/notebooks/simulate_editing.ipynb
@@ -822,9 +822,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "se-daft-env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "se_daft"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
