added code to simulate experiment

--- a/notebooks/Setup DB.ipynb
+++ b/notebooks/Setup DB.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ef352667-c9a2-4a09-81c4-fcc36589cce1",
    "metadata": {},
    "outputs": [],
@@ -48,17 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "cd1f8506-15f6-4f60-aef6-c6362dc078de",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MongoClient(host=['ac-mwbscfs-shard-00-02.fnblyuu.mongodb.net:27017', 'ac-mwbscfs-shard-00-00.fnblyuu.mongodb.net:27017', 'ac-mwbscfs-shard-00-01.fnblyuu.mongodb.net:27017'], document_class=dict, tz_aware=False, connect=True, retrywrites=True, w='majority', ssl=True, authsource='admin', replicaset='atlas-46h5qd-shard-0', read_preference=PrimaryPreferred(tag_sets=None, max_staleness=-1, hedge=None), ssl_ca_certs='/home/lordzuko/miniconda3/envs/se_daft/lib/python3.8/site-packages/certifi/cacert.pem')"
+       "MongoClient(host=['ac-mwbscfs-shard-00-00.fnblyuu.mongodb.net:27017', 'ac-mwbscfs-shard-00-02.fnblyuu.mongodb.net:27017', 'ac-mwbscfs-shard-00-01.fnblyuu.mongodb.net:27017'], document_class=dict, tz_aware=False, connect=True, retrywrites=True, w='majority', ssl=True, authsource='admin', replicaset='atlas-46h5qd-shard-0', read_preference=PrimaryPreferred(tag_sets=None, max_staleness=-1, hedge=None), ssl_ca_certs='/home/lordzuko/miniconda3/envs/se_daft/lib/python3.8/site-packages/certifi/cacert.pem')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "bd0abb94-a6ce-466d-9644-87d9e1fd0dde",
    "metadata": {},
    "outputs": [],
@@ -88,24 +88,45 @@
     "    wav_name = StringField(required=True)\n",
     "    ref_style = StringField(required=True)\n",
     "    text = StringField(required=True)\n",
-    "    utt_len = IntField(required=True)\n"
+    "    # utt_len = IntField(required=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "00bed158-1efd-483e-99fc-7f07aa1124b1",
+   "execution_count": 6,
+   "id": "54650333-bb8a-488c-bfc1-f242fce95c6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for v in Text.objects():\n",
-    "    v.update(set__ref_style=\"fast_speech\")"
+    "import yaml\n",
+    "config = yaml.load(\n",
+    "    open(\"/home/lordzuko/work/speech-editor/conf/config.yaml\", \"r\"), Loader=yaml.FullLoader\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "26fa40ca-7307-4be5-9c8e-1d40ce5d220b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counter = 1\n",
+    "max = str(20)\n",
+    "for st, st_path in config[\"ref_style\"].items():\n",
+    "    for t_k, t_v in config[\"text\"].items():\n",
+    "        data = {}\n",
+    "        data[\"wav_name\"] = f\"{counter}/{max}.wav\"\n",
+    "        data[\"ref_style\"] = st\n",
+    "        data[\"text\"] = t_v\n",
+    "        success = Text(**data).save()\n",
+    "        counter+=1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26fa40ca-7307-4be5-9c8e-1d40ce5d220b",
+   "id": "95c63c35-9691-470c-92d8-a043c0c3d7bd",
    "metadata": {},
    "outputs": [],
    "source": []
