--- a/notebooks/Setup DB.ipynb
+++ b/notebooks/Setup DB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "78dc3131-99e8-45c7-ba49-b1c69c933bc1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "ef352667-c9a2-4a09-81c4-fcc36589cce1",
    "metadata": {},
    "outputs": [],
@@ -48,17 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "cd1f8506-15f6-4f60-aef6-c6362dc078de",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MongoClient(host=['ac-mwbscfs-shard-00-00.fnblyuu.mongodb.net:27017', 'ac-mwbscfs-shard-00-02.fnblyuu.mongodb.net:27017', 'ac-mwbscfs-shard-00-01.fnblyuu.mongodb.net:27017'], document_class=dict, tz_aware=False, connect=True, retrywrites=True, w='majority', ssl=True, authsource='admin', replicaset='atlas-46h5qd-shard-0', read_preference=PrimaryPreferred(tag_sets=None, max_staleness=-1, hedge=None), ssl_ca_certs='/home/lordzuko/miniconda3/envs/se_daft/lib/python3.8/site-packages/certifi/cacert.pem')"
+       "MongoClient(host=['ac-mwbscfs-shard-00-01.fnblyuu.mongodb.net:27017', 'ac-mwbscfs-shard-00-02.fnblyuu.mongodb.net:27017', 'ac-mwbscfs-shard-00-00.fnblyuu.mongodb.net:27017'], document_class=dict, tz_aware=False, connect=True, retrywrites=True, w='majority', ssl=True, authsource='admin', replicaset='atlas-46h5qd-shard-0', read_preference=PrimaryPreferred(tag_sets=None, max_staleness=-1, hedge=None), ssl_ca_certs='/home/lordzuko/miniconda3/envs/se/lib/python3.8/site-packages/certifi/cacert.pem')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "bd0abb94-a6ce-466d-9644-87d9e1fd0dde",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "54650333-bb8a-488c-bfc1-f242fce95c6e",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "6b9b66b0-12fa-47b2-bef6-feee3bd401b9",
    "metadata": {},
    "outputs": [
@@ -126,13 +126,13 @@
        "  'style3': '/home/lordzuko/work/speech-editor/assets/ref_style/CB-EM-26-343.wav',\n",
        "  'style4': '/home/lordzuko/work/speech-editor/assets/ref_style/CB-FFM-31-47.wav',\n",
        "  'style5': '/home/lordzuko/work/speech-editor/assets/ref_style/CB-LCL-12-167.wav'},\n",
-       " 'text': {'text1': 'The minutes passed very slowly: fifteen were counted before the library- door again opened.',\n",
-       "  'text2': 'She felt immediately that she should like him;',\n",
-       "  'text3': 'Gabriel, will you stay on with me?',\n",
-       "  'text4': 'I am sure, a month ago, I had no more idea myself!'}}"
+       " 'text': {'text1': 'The time passed very slowly',\n",
+       "  'text2': 'She immediately liked him',\n",
+       "  'text3': 'Gabriel, will you stay?',\n",
+       "  'text4': 'Such a sad loss!'}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "26fa40ca-7307-4be5-9c8e-1d40ce5d220b",
    "metadata": {},
    "outputs": [],
@@ -171,9 +171,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "se-daft-env",
    "language": "python",
-   "name": "python3"
+   "name": "se_daft"
   },
   "language_info": {
    "codemirror_mode": {
